# threadify

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  prompt_plan.md  pyproject.toml  spec.md  todo.md
.github/workflows/: ci.yml
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/api/: auth.py  routes.py
backend/app/clients/: length_client.py
backend/app/db/: base.py  dao.py  models.py  schema.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1b475605aeae_initial_schema_with_all_models.py
backend/app/security/: __init__.py  crypto.py  oauth_x.py
backend/app/services/: budget.py  canonicalize.py  duplicate_detection.py  generate.py  images.py  post_x.py  scraper.py
backend/app/web/: __init__.py  forms.py  oauth_routes.py  routes.py
backend/app/web/static/: style.css
backend/app/web/templates/: base.html  history.html  index.html  review.html
backend/tests/: __init__.py  conftest.py  test_account_secrets.py  test_budget.py  test_canonicalize.py  test_cli.py  test_crypto.py  test_db_models.py  test_duplicate_detection.py  test_generate.py  test_health.py  test_history_routes.py  test_images.py  test_length_client.py  test_migrations.py  test_oauth_routes.py  test_oauth_x.py  test_post_x.py  test_review_routes.py  test_scraper.py  test_submit_endpoint.py  test_web_routes.py
deploy/: Dockerfile.api  Dockerfile.node  docker-compose.yml  env.example
node-helpers/length-service/: package.json  pnpm-lock.yaml
node-helpers/length-service/src/: index.ts
node-helpers/length-service/test/: index.test.ts
